--- a/000-preface.org
+++ b/000-preface.org
@@ -13,7 +13,9 @@ It's rather beautiful. The Crec are aware, just as you are, that there is such a
 
 We will get to dinosaurs. It's complicated.
 
-And pretty much everyone lives in a cave. Let's get that out of the way. What's sometimes not so beautiful is how each opening often looks like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
+And pretty much everyone lives in a cave, at least in Crec. Let's get that out of the way. Cave, the literal word meaning that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
+
+What's sometimes not so beautiful is how each opening often looks like a rather droopy upper eyelid the morning after a socially-acceptable, generous quantity of good juff.
 
 Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. There's even a military refinement of this idea: Colonel Thag's Burrow Buster.
 
@@ -134,12 +136,12 @@ Brfgf. Bugrgl. Bunjle. Brrrkk.
 Verk, in his way, was trying to make sound of a thousand mighty boulders on their way to smite the enemy.
 #+begin_quote
 
-I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the floor, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side Rhino-Scat Woods before that. And a woods it was.
+I mean these things come crashing down, leveling everything! There were trees a man around that were not just snapped, they were sheered off at the floor, after which their roots were pounded into pulp. The land on that side of the hill is still good for working to this day, and it was only known as Morning-sun-left-side[fn:: North] Rhino-Scat Woods before that. And a woods it was.
 
 Then the rhino started meeting up with the men... and the Clorp.
 
 #+end_quote
-Verk gave his signature knowing wink, and the audience laughs, nervously.
+Verk gave his signature knowing wink, and the audience laughed, nervously.
 #+begin_quote
 
 It went through ranks upon ranks of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
@@ -150,18 +152,18 @@ Our men cheered mightily, tempered indeed by the thought of those among our rank
 The audience collectively gave a pained, but soft groan of regret and some gently pulled on their noses.[fn:: This is a gesture of lament and deep respect for unavoidable sacrifices made.]
 #+begin_quote
 
-And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.].
+And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.]. At this point, the Clorp who weren't dead were running for their lives, leaving us a wide swath of good farming land to occupy. Which we used to great effect in years to come, leveraging our successes[fn:: This is the great, mostly unoccupied bulge to Crec's south that still makes up most of its territory.].
 #+end_quote
 
 A quiet, knowing laugh from audience makes its way around the burrow.
 
 Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out long, slow, quiet sigh, and seemed to be challenging the audience to interrupt his rest.
 
-Indeed, no one was quite sure what to do. It was understood that you stay seated and reverent, but meanwhile your mind was sprinting around trying to guess exactly the right posture and tilt of the head, much less /saying/ anything. It was a very quiet sort of panic.
+Indeed, no one was quite sure what to do. It was understood that you stay seated and reverent, but meanwhile your mind was sprinting around trying to guess exactly the right posture and empathetic tilt-of-the-head, much less /saying/ anything. It was a very quiet sort of panic.
 
-It had been a while, possibly the longest pause-for-effect at the time. "What if he he's /dead/?", some of the audience dared to allow themselves to wonder. The followup thoughts varied considerably.
-
-Verk slowly opened his eyes. "Now, do any of the precious children in our audience have any questions? Maybe, do you get an idea of what I'm trying to say here?" For Verk especially loved the children's questions.
+It had been a while, possibly the longest pause-for-effect at the time. "What if he he's /dead/?", some of the audience dared to allow themselves to wonder. The subsequent thoughts varied considerably.
+yyyy
+Verk slowly opened his eyes. "Now, do any of the precious cavechildren in our audience have any questions? Maybe, do you get an idea of what I'm trying to say here?" For Verk especially loved the children's questions.
 
 One of the older cousins stood, and looked behind him at his nervous mother.
 
