--- a/000-preface.org
+++ b/000-preface.org
@@ -163,19 +163,19 @@ Indeed, no one was quite sure what to do. It was understood that you stay seated
 
 It had been a while, possibly the longest pause-for-effect at the time. /What if he he's/ dead?, some of the audience dared to allow themselves to wonder. The subsequent thoughts varied considerably.
 
-Verk slowly opened his eyes. "Now, do any of the precious cavechildren in our audience have any questions? Maybe, do you get an idea of what I'm trying to say here?" For Verk especially loved the children's questions.
+Verk slowly opened his eyes. "Now, do any of the precious cavechildren in our audience have any questions? Maybe you get an idea of what silly old Verk is trying to say here?" For Verk especially loved the children's questions. He made the sweetest mall-Santa[fn:: The Crec would say 'looks-nice-traveler'.] smile he could muster.
 
-One of the older cousins stood, and looked behind him at his nervous mother.
+One of the older male cousins[fn:: The Zog clan, like all, was ranked in a very loose way by generation: grandparents, parents, cousins, cavebabies. Grav was technically still a cousin, but was the actual age of many parents.] stood, and looked behind him at his nervous mother.
 
 "Father-Brother Verk, why was the boulder-rhino kept a secret from the Crec army?"
 
 Verk was sure had covered this, and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
 
-"Little rhino-calf, do you remember me talking about that? It's not known nor is it to be known. You're a clever lad. Have a seat, please."
+"Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty, so far, I'm afraid. You're a clever lad. Have a seat, please."
 
-A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. Likely a lovely child. Well, shaped.
+A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. /Likely a lovely child. Well shaped./
 
-"Father-Brother Verk," Verk thought she had rushed the whole name thing, "Were there any other things we could have done to avoid all this dying, for everybody?"
+"Father-Brother Verk," Verk thought she had rushed the whole name part, "Were there any other things we could have done to avoid all this dying, for everybody?"
 
 Verk knew that putting his hand anywhere near his face would it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
 
