--- a/000-preface.org
+++ b/000-preface.org
@@ -175,9 +175,9 @@ Verk was sure had covered this, and was duly annoyed. He stared at the boy for w
 
 A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. /Likely a lovely child. Well shaped./
 
-"Father-Brother Verk," Verk thought she had rushed the whole name part, "Were there any other things we could have done to avoid all this dying, for everybody?"
+"Father-Brother Verk," Verk thought she had rushed the whole name part, "Were there any other things we could have done to avoid all this dying, for everybody? Like..." She looked around. "Could we just maybe get along with and share with the other tribe? After all, Nature has given us all this. Who has the claim?"
 
-Verk knew that putting his hand anywhere near his face would it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
+Verk knew that putting his hand anywhere near his face, it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
 
 "Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives, in far too many cases."
 
