--- a/000-preface.org
+++ b/000-preface.org
@@ -183,7 +183,11 @@ Verk knew that putting his hand anywhere near his face, it would, all by itself,
 
 Noses tugged.
 
-"These men are quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than he meant."
+"Have you ever tried negotiating with a Balrag?"
+
+Snickers.
+
+"These men you are learning about today were quite capable and paid a high price; all of them. Miss, what have you done for your Forest lately?" That last bit Verk thought might have a bit more sting than intended.
 
 There was a muttering in the audience, and the mood, as it had been pretty much all along, got to be ever more glum. Even during his speak Verk had seem off, distracted, irritated. Was he well?
 
