--- a/000-preface.org
+++ b/000-preface.org
@@ -183,7 +183,7 @@ Verk knew that putting his hand anywhere near his face, it would, all by itself,
 
 Noses tugged.
 
-"Have you ever tried negotiating with a Balrag?"
+"Have /you/ ever tried negotiating with a Balrag?"
 
 Snickers.
 
