--- a/000-preface.org
+++ b/000-preface.org
@@ -203,7 +203,7 @@ There was a rather long, very quiet murmur as parents discretely mouthed ideas t
 
 One very small, sweet cavegirl tottered slightly as she stood, and made an exaggerated bow. The audience, nervous and hyper-aware, giggled with surprising generosity.
 
-"Father-Brother Verk..." She had just a twist of endearing toddler speech, as she rolled her head self-consciously. She smiled, showing not a few missing teeth.
+"Father-Brother Verk..." She had just a twist of endearing toddler speech, as she rolled her head self-consciously. She smiled broadly, proudly showing that one rather large, prominent tooth had fallen out recently.[fn:: They have a tooth fairy and it is complicated.].
 
 "Father-Brother Verk, why do people have to die?"
 
