--- a/000-preface.org
+++ b/000-preface.org
@@ -207,7 +207,7 @@ One very small, sweet cavegirl tottered slightly as she stood, and made an exagg
 
 "Father-Brother Verk, why do people have to die?"
 
-There it was, a gem that Verk could work with.
+There it was; a gem that Verk could work with.
 
 "Sweet, sweet rhino-calf, please ...please come here." Verk was visibly moved.
 
