--- a/000-preface.org
+++ b/000-preface.org
@@ -221,6 +221,8 @@ He made a gesture of caressing his heart and nodding his head slowly with a smil
 
 The girl perked up, faced the audience with cupped ands and in exaggerated toddler fashion, screamed impossibly loudly in the echoey burrow.
 
+"WHY DO PEOPLE HAVE TO DIE?"
+
 She giggled and thrust her head into Verk's belly, still giggling loudly.
 
 "Yes indeed, tender-tuber, why must this terrible thing happen. Why must people die like this?!"
