--- a/000-preface.org
+++ b/000-preface.org
@@ -223,7 +223,7 @@ The girl perked up, faced the audience with cupped ands and in exaggerated toddl
 
 "WHY DO PEOPLE HAVE TO DIE?"
 
-She giggled and thrust her head into Verk's belly, still giggling loudly.
+She giggled and thrust her head into the various regalia covering Verk's belly, still giggling loudly.
 
 "Yes indeed, tender-tuber, why must this terrible thing happen. Why must people die like this?!"
 
