--- a/000-preface.org
+++ b/000-preface.org
@@ -225,7 +225,7 @@ The girl perked up, faced the audience with cupped ands and in exaggerated toddl
 
 She giggled and thrust her head into the various fine jungle regalia covering Verk's big belly, still giggling loudly.
 
-"Yes indeed, tender-tuber, why must this terrible thing happen. Why must people die like this?!"
+"Yes indeed, tender-tuber, why must this terrible thing happen? Why must people die like this?"
 
 In another fluid motion that belies his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
 
