--- a/000-preface.org
+++ b/000-preface.org
@@ -227,7 +227,7 @@ She giggled and thrust her head into the various fine jungle regalia covering Ve
 
 "Yes indeed, tender-tuber, why must this terrible thing happen? Why must people die like this?"
 
-In another fluid motion that belies his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
+In another fluid motion that belied his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
 
 He began to pace back and forth on /his/ large dais.
 
