--- a/000-preface.org
+++ b/000-preface.org
@@ -229,7 +229,7 @@ She giggled and thrust her head into the various fine jungle regalia covering Ve
 
 In another fluid motion that belied his size and shape, Verk had set the girl down gently in front of him and seemed to have immediately forgotten her.
 
-He began to pace back and forth on /his/ large dais.
+He began to pace back and forth on his large dais.
 
 He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His slightly pinker face was facing the floor at a fixed angle.
 
