--- a/000-preface.org
+++ b/000-preface.org
@@ -236,7 +236,7 @@ He paced almost athletically, making sharp, possibly "military" about-faces at e
 Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
 
 #+begin_quote
-My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that fierce pride and unashamed love for this community of humble, hard working, honest men and baby-makers.
+My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that fierce pride and unashamed love for this community of humble, hard working, honest men and baby-makers[fn:: For this is what they called women, using the literal words, one following the other.].
 
 /*It is essential*/
 #+end_quote
