--- a/000-preface.org
+++ b/000-preface.org
@@ -251,7 +251,7 @@ And the things that the /Clorp/ have /caused to come to pass/ sting less with ev
 
 Verk let that sink in, while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
 
-The audience considered this for a while and waited for the next queue from lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
+The audience considered this for a while and waited for the next cue from lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
 
 The audience rightly guessed that this concluded his talk, and so cheered "reverently" as best they could.
 
