--- a/000-preface.org
+++ b/000-preface.org
@@ -255,7 +255,7 @@ The audience considered this for a while and waited for the next cue from lectur
 
 The audience rightly guessed that this concluded his talk, and so cheered "reverently" as best they could.
 
-"Please think long and hard on this my dear people, as though your lives depend upon it. Now /who's ready for some thistle bread with mammoth icing!?/"
+"Please think long and hard on this my dear people, as though your lives depend upon it. Now /who's ready for some thistle bread with ambling-feast icing!?/"
 
 Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling xxx to be over.
 
