--- a/000-preface.org
+++ b/000-preface.org
@@ -257,9 +257,9 @@ The audience rightly guessed that this concluded his talk, and so cheered "rever
 
 "Please think long and hard on this my dear people, as though your lives depend upon it. Now /who's ready for some thistle bread with ambling-feast icing!?/"
 
-Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling xxx to be over.
+Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
 
-Verk stood smiling, still center-stage on the dais, nodding and smiling to the people as they filled towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning. Everyone felt the same way about a morning like this.
+Verk stood smiling, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning. Everyone felt the same way about a morning like this.
 
 Verk's gaze caught Grav as he sauntered into the meal burrow. Verk had is usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
 
