--- a/000-preface.org
+++ b/000-preface.org
@@ -259,9 +259,11 @@ The audience rightly guessed that this concluded his talk, and so cheered "rever
 
 Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
 
-Verk stood, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning. Everyone felt the same way about a morning like this.
+Verk stood, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning, before Verk's arrival.
 
-Verk's gaze caught Grav as he sauntered into the meal burrow. Verk had is usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
+There was snatching of food and grunting, like that seen at a modern wedding reception.
+
+Verk's gaze caught Grav as he sauntered into the meal burrow. Verk had his usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
 
 Grav looked back, looked forward at the meal burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hopped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Verk across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
 
