--- a/000-preface.org
+++ b/000-preface.org
@@ -267,7 +267,7 @@ Verk's gaze caught Grav as he sauntered into the meal burrow. Grav had his usual
 
 Grav looked back, looked forward at the meal-burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hoped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Verk across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
 
-Much later, after a responsible (given the occasion) amount of juff and enough to eat (plus half again) for everyone, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating into the relief-hole at the far back corner of the relief-room. A couple of laughing, squealing verge-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
+Much later, after a responsible (given the occasion) amount of juff and enough to eat (plus half again) for everyone, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating into the relief-hole at the far back arc of the relief-room. A couple of laughing, squealing verge-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
 
 To Grav's utter horror, and with an exaggerated shuffling of the feet Verk got situated in front of the relief-hole right next to him. He was smiling serenely, swaying almost imperceptibly, and reeking of juff and female-hippo-musk[fn:: Female hippo musk is indeed used as a perfume. However, as this is scarce and valuable, it is also used to just mean "perfume" or "cologne"].
 
