--- a/000-preface.org
+++ b/000-preface.org
@@ -273,7 +273,7 @@ To Grav's utter horror, and with an exaggerated shuffling of the feet Verk got s
 
 "My noble, hopeful, young elk-buck. It's Grav, yes? Grav, Son Of Zog Many-Follow-Then Son of Grut? I wonder what you have planned for succession." One eyebrow wagging. "I don't see or hear of any intrigue involving your brothers, younger all of them. Seems they have other plans and are happy with them. Here comes Grav clan, yes?", Verk says and winks drunkenly.
 
-Verk was a practiced drunk. It seemed like he affected some amount of drunkenness when sober /in addition to/ working hard at appearing sober when drunk. Verk had learned to work both ends of his spear. With this added to the almost universal instinct to look at Verk as a kind of infallible caveman's caveman resulted in the vast majority of others genuinely never suspecting he had much interest in juff. And was mostly always stone-sober[fn:: The Crec do not use this expression, but they do say "stone-drunk" for obvious reasons.] "He's as he always is, Dear Father-Brother Verk.", one would surely say with a smile.
+Verk was a practiced drunk. It seemed like he affected some amount of drunkenness when sober /in addition to/ working hard at appearing sober when drunk. Verk had learned to work both ends of his spear. With this added to the almost universal instinct to look at Verk as a kind of infallible caveman's caveman[fn:: You may think: Tarzan-meets-John-Wayne.] resulted in the vast majority of others genuinely never suspecting he had much interest in juff. And was mostly always stone-sober[fn:: The Crec do not use this expression, but they do say "stone-drunk" for obvious reasons.] "He's as he always is, Dear Father-Brother Verk.", one would surely say with a smile.
 
 Verk's voice became calm, clear, and purposeful.
 
