--- a/000-preface.org
+++ b/000-preface.org
@@ -279,9 +279,9 @@ Verk's voice became calm, clear, and purposeful.
 
 "Here is what's what, you inept, disrespectful, ruinous young man." Verk closed his eyes and inhaled slowly and smoothly through his nose.
 
-"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding."
+"I know exactly what you are /thinking/, and what's more, I know exactly what you have /done/. It will not stand, and you will be made to pay. After which, I grant you the privileged of getting on your knees before all and convincing us of your /genuine/ remorse and renewed understanding.
 
-"You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
+You are my blood, and there is a bond and love that transcends almost all things. What you need to do is work hastily on the /almost/ before you cross a line, child."
 
 Verk's eyes opened and he smiled. His voice now was unnecessarily loud with an affected cheerfulness. He shook himself and said, "Clear enough young buck?" He slapped Verk's bare shoulder with his clean hand. "I will see /you/ at club-drill next time, yes? I believe in four days?" Verk's smile broadened and his form froze as he awaited a response.
 
