--- a/000-preface.org
+++ b/000-preface.org
@@ -291,6 +291,6 @@ Thinking that he should acknowledge so that all in the burrow could hear, since 
 
 Grav affected a casualness as he finished and casually made his way out of the crowded relief-burrow.
 
-Grav had yet-more, unwelcome thinking to do. He made his way to his burrow no longer shaken but stirred by Verk's words.
+Grav now had yet-more, unwelcome thoughts to anxiously dwell upon. This sounded like a declaration of war straight from soldier Verk. /Though not having been stirred by Verk's earlier words, I have been deeply shaken by these/, he thought.
 
-"What in the /Forest/ was that about?", he wondered.
+"What in the /Forest/ was that about?", he mouthed.
