--- a/000-preface.org
+++ b/000-preface.org
@@ -293,4 +293,4 @@ Grav affected a casualness as he finished and casually made his way out of the c
 
 Grav now had yet-more, unwelcome thoughts to anxiously dwell upon. This sounded like a declaration of war straight from soldier Verk. /Though not having been stirred by Verk's earlier words, I have been deeply shaken by these/, he thought.
 
-"What in the /Forest/ was that about?", he mouthed.
+"What in the /Forest/ was that about?", he mouthed. If nothing else, he needed sleep.
