--- a/001-where.org
+++ b/001-where.org
@@ -2,7 +2,7 @@
 
 Plans for the next morning, included: Wander around in the woods with Gog. Gog and Grav were cousins. Pretty much the same age, much-little.
 
-Grav and Gog had been same-cousins and highest-friends for their whole lives. They'd been living together in Bhorv Zolk for about half of that time, off and on throughout their lives.
+Grav and Gog had been same-cousins[fn:: First cousins] and highest-friends for their whole lives. They'd been living together in Bhorv Zolk for about half of that time, off and on throughout their lives.
 
 They had the same instinct for benefit-crazy-think, a term that means, "to benefit from free and open thinking and doing." Both realized, through their endless talking about ideas, that if you explore the idea places that no one else would because they were lazy or superstitious, you would more easily find value-stones of ideas that, because they were original and unexplored, were more profitable than average.
 
